modify input fields for membership form

--- a/metager/resources/less/metager/general/forms.less
+++ b/metager/resources/less/metager/general/forms.less
@@ -8,6 +8,7 @@
   vertical-align: middle;
   border-left-style: none;
 }
+
 .search-input-mini {
   border-top-right-radius: 0px !important;
   border-bottom-right-radius: 0px !important;
@@ -60,10 +61,16 @@ label {
 input[type="text"],
 input[type="password"],
 input[type="email"],
-input[type="number"] {
+input[type="number"],
+input::file-selector-button,
+select {
   background-color: @input-background;
   color: @input-text;
   padding: 4px 8px;
+}
+
+input[type="file"] {
+  padding: 0;
 }
 
 input[type="search"] {
@@ -149,7 +156,7 @@ textarea {
   background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
   border: 1px solid @input-border;
   border-radius: @input-border-radius; // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
-  .box-shadow(inset 0 1px 1px rgba(0,0,0,0.075));
+  .box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075));
   .transition(~"border-color ease-in-out .15s, box-shadow ease-in-out .15s");
 
   // Customize the `:focus` state to imitate native WebKit styles.
@@ -208,6 +215,7 @@ input[type="search"] {
 // Note that as of 9.3, iOS doesn't support `week`.
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
+
   input[type="date"],
   input[type="time"],
   input[type="datetime-local"],
@@ -256,6 +264,7 @@ input[type="search"] {
     cursor: pointer;
   }
 }
+
 .radio input[type="radio"],
 .radio-inline input[type="radio"],
 .checkbox input[type="checkbox"],
@@ -265,8 +274,8 @@ input[type="search"] {
   margin-top: 4px \9;
 }
 
-.radio + .radio,
-.checkbox + .checkbox {
+.radio+.radio,
+.checkbox+.checkbox {
   margin-top: -5px; // Move up sibling radios or checkboxes for tighter spacing
 }
 
@@ -281,8 +290,9 @@ input[type="search"] {
   font-weight: normal;
   cursor: pointer;
 }
-.radio-inline + .radio-inline,
-.checkbox-inline + .checkbox-inline {
+
+.radio-inline+.radio-inline,
+.checkbox-inline+.checkbox-inline {
   margin-top: 0;
   margin-left: 10px; // space out consecutive inline controls
 }
@@ -293,23 +303,28 @@ input[type="search"] {
 // Note: Neither radios nor checkboxes can be readonly.
 input[type="radio"],
 input[type="checkbox"] {
+
   &[disabled],
   &.disabled,
   fieldset[disabled] & {
     cursor: @cursor-disabled;
   }
 }
+
 // These classes are used directly on <label>s
 .radio-inline,
 .checkbox-inline {
+
   &.disabled,
   fieldset[disabled] & {
     cursor: @cursor-disabled;
   }
 }
+
 // These classes are used on elements with <label> descendants
 .radio,
 .checkbox {
+
   &.disabled,
   fieldset[disabled] & {
     label {
@@ -349,6 +364,7 @@ input[type="checkbox"] {
 .input-sm {
   .input-size(@input-height-small; @padding-small-vertical; @padding-small-horizontal; @font-size-small; @line-height-small; @input-border-radius-small);
 }
+
 .form-group-sm {
   .form-control {
     height: @input-height-small;
@@ -357,14 +373,17 @@ input[type="checkbox"] {
     line-height: @line-height-small;
     border-radius: @input-border-radius-small;
   }
+
   select.form-control {
     height: @input-height-small;
     line-height: @input-height-small;
   }
+
   textarea.form-control,
   select[multiple].form-control {
     height: auto;
   }
+
   .form-control-static {
     height: @input-height-small;
     min-height: (@line-height-computed + @font-size-small);
@@ -377,6 +396,7 @@ input[type="checkbox"] {
 .input-lg {
   .input-size(@input-height-large; @padding-large-vertical; @padding-large-horizontal; @font-size-large; @line-height-large; @input-border-radius-large);
 }
+
 .form-group-lg {
   .form-control {
     height: @input-height-large;
@@ -385,14 +405,17 @@ input[type="checkbox"] {
     line-height: @line-height-large;
     border-radius: @input-border-radius-large;
   }
+
   select.form-control {
     height: @input-height-large;
     line-height: @input-height-large;
   }
+
   textarea.form-control,
   select[multiple].form-control {
     height: auto;
   }
+
   .form-control-static {
     height: @input-height-large;
     min-height: (@line-height-computed + @font-size-large);
@@ -415,6 +438,7 @@ input[type="checkbox"] {
     padding-right: (@input-height-base * 1.25);
   }
 }
+
 // Feedback icon (requires .glyphicon classes)
 .form-control-feedback {
   position: absolute;
@@ -428,16 +452,18 @@ input[type="checkbox"] {
   text-align: center;
   pointer-events: none;
 }
-.input-lg + .form-control-feedback,
-.input-group-lg + .form-control-feedback,
-.form-group-lg .form-control + .form-control-feedback {
+
+.input-lg+.form-control-feedback,
+.input-group-lg+.form-control-feedback,
+.form-group-lg .form-control+.form-control-feedback {
   width: @input-height-large;
   height: @input-height-large;
   line-height: @input-height-large;
 }
-.input-sm + .form-control-feedback,
-.input-group-sm + .form-control-feedback,
-.form-group-sm .form-control + .form-control-feedback {
+
+.input-sm+.form-control-feedback,
+.input-group-sm+.form-control-feedback,
+.form-group-sm .form-control+.form-control-feedback {
   width: @input-height-small;
   height: @input-height-small;
   line-height: @input-height-small;
@@ -447,19 +473,22 @@ input[type="checkbox"] {
 .has-success {
   .form-control-validation(@state-success-text; @state-success-text; @state-success-bg);
 }
+
 .has-warning {
   .form-control-validation(@state-warning-text; @state-warning-text; @state-warning-bg);
 }
+
 .has-error {
   .form-control-validation(@state-danger-text; @state-danger-text; @state-danger-bg);
 }
 
 // Reposition feedback icon if input has visible label above
 .has-feedback label {
-  & ~ .form-control-feedback {
+  &~.form-control-feedback {
     top: (@line-height-computed + 5); // Height of the `label` and its margin
   }
-  &.sr-only ~ .form-control-feedback {
+
+  &.sr-only~.form-control-feedback {
     top: 0;
   }
 }
@@ -488,8 +517,10 @@ input[type="checkbox"] {
 // Heads up! This is mixin-ed into `.navbar-form` in navbars.less.
 
 .form-inline {
+
   // Kick in the inline
   @media (min-width: @screen-sm-min) {
+
     // Inline-block all the things for "inline"
     .form-group {
       display: inline-block;
@@ -521,7 +552,7 @@ input[type="checkbox"] {
     }
 
     // Input groups need that 100% width though
-    .input-group > .form-control {
+    .input-group>.form-control {
       width: 100%;
     }
 
@@ -543,6 +574,7 @@ input[type="checkbox"] {
         padding-left: 0;
       }
     }
+
     .radio input[type="radio"],
     .checkbox input[type="checkbox"] {
       position: relative;
@@ -562,6 +594,7 @@ input[type="checkbox"] {
 // labels on the left and inputs on the right.
 
 .form-horizontal {
+
   // Consistent vertical alignment of radios and checkboxes
   //
   // Labels also get some reset styles, but that is scoped to a media query below.
@@ -573,6 +606,7 @@ input[type="checkbox"] {
     margin-bottom: 0;
     padding-top: (@padding-base-vertical + 1); // Default padding plus a border
   }
+
   // Account for padding we're adding to ensure the alignment and of help text
   // and other content below items
   .radio,
@@ -591,9 +625,7 @@ input[type="checkbox"] {
     .control-label {
       text-align: right;
       margin-bottom: 0;
-      padding-top: (
-        @padding-base-vertical + 1
-      ); // Default padding plus a border
+      padding-top: (@padding-base-vertical + 1); // Default padding plus a border
     }
   }
 
@@ -617,6 +649,7 @@ input[type="checkbox"] {
       }
     }
   }
+
   .form-group-sm {
     @media (min-width: @screen-sm-min) {
       .control-label {
