--- a/metager/resources/less/metager/pages/membership/membership.less
+++ b/metager/resources/less/metager/pages/membership/membership.less
@@ -2,93 +2,174 @@
   padding-inline: 0.5rem;
   display: grid;
   gap: 2rem;
-  > h1 {
+
+  >h1 {
     font-size: clamp(1.2em, 6vw, 2.5em);
     margin: 0;
   }
+
   h3 {
     margin: 0;
     border-bottom: 1px solid @border-color;
   }
+
   .error {
     font-size: 0.8rem;
     color: red;
   }
-  input {
+
+  input,
+  select,
+  input::file-selector-button {
     padding: 0.5rem 1rem;
   }
-  > form#membership-form {
+
+  input[type="file"] {
+    padding: 0;
+  }
+
+  .hidden {
+    display: none;
+  }
+
+  >form#membership-form {
     display: grid;
     gap: 2rem;
     border: 1px solid @border-color;
     padding: 1rem;
     box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.4);
-    > div#contact-data {
+
+    >div#contact-data {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+
       gap: 1rem 0.5rem;
-      > h3 {
-        grid-column: span 2;
-      }
-      > div.input-group {
+
+      >div.input-group {
         display: flex;
         flex-direction: column;
         place-items: center;
-        > label {
+
+        >label {
           font-size: 0.8rem;
           font-weight: normal;
           color: @color-light-grey;
         }
       }
-      @media (max-width: 530px) {
-        grid-template-columns: 1fr;
-        > h3 {
-          grid-column: auto;
+
+      &.company {
+        grid-template-columns: 1fr 0.5fr 1fr;
+
+        >h3 {
+          grid-column: span 3;
+
+          >a {
+            font-size: 0.8rem;
+          }
         }
-        > div.input-group > input {
-          width: 100%;
+      }
+
+      &.person {
+        grid-template-columns: 0.5fr 1fr 1fr 1fr;
+
+        >h3 {
+          grid-column: span 4;
+
+          >a {
+            font-size: 0.8rem;
+          }
+        }
+
+
+
+        @media (max-width: 920px) {
+          grid-template-columns: 0.5fr 1fr 1fr;
+
+          >h3 {
+            grid-column: span 3;
+          }
+
+          >div.input-group {
+            >input {
+              width: 100%;
+            }
+
+            &.email {
+              grid-column: span 3;
+            }
+          }
+        }
+
+        @media (max-width: 520px) {
+          grid-template-columns: 1fr 1fr;
+
+          >h3 {
+            grid-column: span 2;
+          }
+
+          >div.input-group {
+            >input {
+              width: 100%;
+            }
+
+            &.title,
+            &.email {
+              grid-column: span 2;
+            }
+          }
         }
       }
     }
-    > div#membership-fee {
+
+    >div#membership-fee {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
       gap: 1rem 0.5rem;
-      > h3,
-      > div.error,
-      div:nth-child(2) {
+
+      >h3,
+      >div.error,
+      div:nth-child(2),
+      div#reduction-container {
         grid-column: span 4;
       }
 
       @media (max-width: 385px) {
         grid-template-columns: 1fr 1fr;
-        > h3,
-        > div.error,
-        div:nth-child(2) {
+
+        >h3,
+        >div.error,
+        div:nth-child(2),
+        div#reduction-container {
           grid-column: span 2;
         }
       }
-      > div.input-group {
+
+      >div.input-group {
         display: grid;
-        > input[type="radio"] {
+
+        >input[type="radio"] {
           display: none;
-          &:checked + label {
+
+          &:checked+label {
             border-color: @metager-orange;
           }
         }
+
         &.custom {
-          > input#amount-custom-value {
+          >input#amount-custom-value {
             display: none;
             min-width: 6rem;
           }
-          > input#amount-custom {
+
+          >input#amount-custom {
             &:checked {
-              + label {
+              +label {
                 display: none;
               }
-              + label + input {
+
+              +label+input {
                 display: block;
                 border: 1px solid @metager-orange;
+
                 &:focus {
                   outline: 0;
                 }
@@ -96,7 +177,8 @@
             }
           }
         }
-        > label {
+
+        >label {
           cursor: pointer;
           font-weight: normal;
           margin: 0;
@@ -106,41 +188,57 @@
           border: 1px solid @border-color;
         }
       }
+
     }
-    > div#membership-payment {
+
+    >div#membership-payment {
       display: grid;
       gap: 1rem;
-      > div#membership-interval {
+
+      >div#membership-interval {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
 
-        @media (max-width: 520px) {
+        @media (max-width: 600px) {
           grid-template-columns: 1fr 1fr;
         }
+
         gap: 0.5rem;
-        > div.input-group {
+
+        >div.input-group {
           display: grid;
-          > label {
-            display: grid;
+
+          >label {
+            display: flex;
+            align-items: center;
             font-weight: normal;
             place-content: center;
             cursor: pointer;
             padding: 0.5rem 1rem;
             border: 1px solid @border-color;
+
+            >span.amount {
+              white-space: pre;
+              font-size: .8rem;
+            }
           }
-          > input {
+
+          >input {
             display: none;
-            &:checked + label {
+
+            &:checked+label {
               border-color: @metager-orange;
             }
           }
         }
       }
-      > div#membership-payment-method {
+
+      >div#membership-payment-method {
         display: grid;
         gap: 0.5rem;
         grid-template-columns: 1fr 1fr;
-        > label {
+
+        >label {
           display: grid;
           font-weight: normal;
           place-content: center;
@@ -148,25 +246,31 @@
           padding: 0.5rem 1rem;
           border: 1px solid @border-color;
         }
-        > div#directdebit-data {
+
+        >div#directdebit-data {
           display: none;
           grid-column: span 2;
           grid-template-columns: 1fr 1fr;
-          > div.error {
+
+          >div.error {
             grid-column: span 2;
           }
+
           @media (max-width: 500px) {
             grid-template-columns: 1fr;
-            > div.error {
+
+            >div.error {
               grid-column: auto;
             }
           }
+
           gap: 0.5rem;
 
-          > div.input-group {
+          >div.input-group {
             display: flex;
             flex-direction: column;
-            > label {
+
+            >label {
               text-align: center;
               font-weight: normal;
               font-size: 0.8rem;
@@ -174,20 +278,25 @@
             }
           }
         }
-        > input {
+
+        >input {
           display: none;
+
           &:checked {
-            + label {
+            +label {
               border-color: @metager-orange;
             }
-            &#payment-method-directdebit ~ div#directdebit-data {
+
+            &#payment-method-directdebit~div#directdebit-data {
               display: grid;
             }
           }
         }
+
         @media (max-width: 380px) {
           grid-template-columns: 1fr;
-          > div#directdebit-data {
+
+          >div#directdebit-data {
             grid-column: auto;
           }
         }
@@ -195,10 +304,11 @@
     }
   }
 
-  > #membership-advantages {
+  >#membership-advantages {
     display: grid;
     gap: 1rem;
-    > div {
+
+    >div {
       display: grid;
       gap: 0.5rem;
     }
