darkmode for date type

--- a/metager/resources/less/metager/general/forms.less
+++ b/metager/resources/less/metager/general/forms.less
@@ -62,6 +62,7 @@ input[type="text"],
 input[type="password"],
 input[type="email"],
 input[type="number"],
+input[type="date"],
 input::file-selector-button,
 select {
   background-color: @input-background;
