--- a/metager/resources/less/metager/parts/button.less
+++ b/metager/resources/less/metager/parts/button.less
@@ -15,6 +15,7 @@
   line-height: 1.428571429;
   .user-select(none);
   color: inherit;
+
   &:hover,
   &:visited {
     color: inherit;
@@ -27,6 +28,11 @@
   color: @input-text;
   background-color: @input-bg;
   border-color: #ccc;
+}
+
+.btn-disabled {
+  background-color: #535353;
+  border-color: @color-grey;
 }
 
 .btn-primary {
