--- a/metager/resources/less/metager/variables-dark.less
+++ b/metager/resources/less/metager/variables-dark.less
@@ -42,3 +42,10 @@
 
 @searchbar-searchicon-brightness: 0.5;
 @searchbar-key-brightness: 0.7;
+
+:root {
+    --background-color: @background-color;
+    --highlight-color: @highlight-color;
+    --font-color: @text-color;
+    --border-color: @border-color;
+}
