--- a/metager/resources/less/metager/variables.less
+++ b/metager/resources/less/metager/variables.less
@@ -86,3 +86,10 @@
 
 @searchbar-searchicon-brightness: 0;
 @searchbar-key-brightness: 0.5;
+
+:root {
+  --background-color: @background-color;
+  --highlight-color: @highlight-color;
+  --font-color: @text-color;
+  --border-color: @border-color;
+}
