--- a/metager/resources/less/metager/pages/admin/membership.less
+++ b/metager/resources/less/metager/pages/admin/membership.less
@@ -2,3 +2,26 @@ table {
     width: 100%;
     text-align: center;
 }
+
+dialog {
+    &::backdrop {
+        background-color: var(--background-color);
+        opacity: 0.6;
+    }
+
+    background-color: var(--highlight-color);
+    color: var(--font-color);
+    border-color: var(--border-color);
+
+    >div {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        row-gap: 0.5rem;
+
+        >textarea {
+            grid-column: span 2;
+            max-width: 400px;
+            width: 90vw;
+        }
+    }
+}
