fix imagesearch layout

--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -291,8 +291,16 @@ a {
       display: grid;
       grid-template-columns: 2fr 1fr;
 
+      >.alert {
+        grid-column: span 2;
+      }
+
       @media (max-width: @full-screen-details-breakpoint) {
         grid-template-columns: 100%;
+
+        >.alert {
+          grid-column: span 1;
+        }
       }
 
       >.image-container {
