add optional messages

--- a/metager/resources/less/metager/pages/admin/membership.less
+++ b/metager/resources/less/metager/pages/admin/membership.less
@@ -18,10 +18,9 @@ dialog {
         grid-template-columns: 1fr 1fr;
         row-gap: 0.5rem;
 
-        >textarea {
+        >textarea,
+        label {
             grid-column: span 2;
-            max-width: 400px;
-            width: 90vw;
         }
     }
 }
