fix table style

--- a/metager/resources/less/metager/pages/admin/membership.less
+++ b/metager/resources/less/metager/pages/admin/membership.less
@@ -1,9 +1,10 @@
 table {
     width: 100%;
     text-align: center;
+    border: 1px solid var(--border-color);
 
     tbody {
-        >tr:nth-child(even) {
+        >tr:nth-child(odd) {
             background-color: var(--highlight-color);
         }
     }
