do not change searchbar layout if suggestions are disabled

--- a/metager/resources/less/metager/pages/resultpage/result-page.less
+++ b/metager/resources/less/metager/pages/resultpage/result-page.less
@@ -999,7 +999,7 @@ a {
     }
 
     /* Create enough space for the search input on small screens */
-    &:has(#header-searchbar .searchbar:focus-within) {
+    &:has(#header-searchbar .searchbar[data-suggest="active"] .search-input:focus-within) {
       grid-template-columns: 1fr;
       grid-template-areas: "research-searchbar";
 
