add new assistant focus

--- a/metager/resources/less/metager/variables-dark.less
+++ b/metager/resources/less/metager/variables-dark.less
@@ -48,4 +48,5 @@
     --highlight-color: @highlight-color;
     --font-color: @text-color;
     --border-color: @border-color;
+    --metager-orange: @metager-orange;
 }
