--- a/metager/resources/less/metager/variables.less
+++ b/metager/resources/less/metager/variables.less
@@ -92,4 +92,5 @@
   --highlight-color: @highlight-color;
   --font-color: @text-color;
   --border-color: @border-color;
+  --metager-orange: @metager-orange;
 }
