--- a/metager/resources/less/metager/general/forms.less
+++ b/metager/resources/less/metager/general/forms.less
@@ -84,6 +84,7 @@ input[type="checkbox"] {
   margin: 4px 0 0;
   margin-top: 1px \9; // IE8-9
   line-height: normal;
+  background-color: @input-background;
 }
 
 input[type="file"] {
