--- a/metager/resources/less/metager/pages/assistant.less
+++ b/metager/resources/less/metager/pages/assistant.less
@@ -4,7 +4,8 @@
         grid-template-columns: 1fr max-content;
         background-color: var(--highlight-color);
         border-radius: 10px;
-        padding: .5rem;
+        padding: .5rem 1rem;
+        gap: .5rem;
 
         >label.input-sizer {
             display: inline-grid;
@@ -29,6 +30,7 @@
             input,
             textarea {
                 width: auto;
+                overflow: hidden;
                 min-width: 1em;
                 grid-area: 1 / 2;
                 font: inherit;
