--- a/metager/resources/less/metager/pages/assistant.less
+++ b/metager/resources/less/metager/pages/assistant.less
@@ -91,12 +91,25 @@
         #chat {
             margin-bottom: 1rem;
             padding: 1rem;
+            display: grid;
+            row-gap: 2rem;
 
             #empty-chat {
                 max-width: 600px;
                 text-align: left;
                 margin: 0 auto;
                 cursor: text !important;
+            }
+
+            >.message {
+                padding: .5rem 1rem;
+
+                &.user {
+                    background-color: var(--highlight-color);
+                    border-radius: 10px;
+
+                    text-align: right;
+                }
             }
         }
     }
