--- a/metager/resources/less/metager/pages/assistant.less
+++ b/metager/resources/less/metager/pages/assistant.less
@@ -110,6 +110,60 @@
 
                     text-align: right;
                 }
+
+                &.agent {
+                    >.typing {
+                        width: 5em;
+                        height: 2em;
+                        position: relative;
+                        padding: 10px;
+                        margin-left: 5px;
+                        background: var(--highlight-color);
+                        border-radius: 20px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+
+                        >.typing__dot {
+                            width: 8px;
+                            height: 8px;
+                            margin: 0 4px;
+                            background: var(--font-color);
+                            border-radius: 50%;
+                            opacity: 0;
+                            animation: loadingFade 2s infinite;
+
+                            &:nth-child(1) {
+                                animation-delay: 0s;
+                            }
+
+                            &:nth-child(2) {
+                                animation-delay: 0.2s;
+                            }
+
+                            &:nth-child(3) {
+                                animation-delay: 0.4s;
+                            }
+
+                            @keyframes loadingFade {
+                                0% {
+                                    opacity: 0;
+                                    scale: 0;
+                                }
+
+                                50% {
+                                    opacity: 0.8;
+                                    scale: 1;
+                                }
+
+                                100% {
+                                    opacity: 0;
+                                    scale: 0;
+                                }
+                            }
+                        }
+                    }
+                }
             }
         }
     }
